chgmgmt_build/src/objects/TrainingProgramProgress__c.object
<CustomObject>
    <fields>
        <fullName>Report__c</fullName>
        <label>レポート</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>受講予定</fullName>
                </value>
                <value>
                    <fullName>受講済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TraineeFullName__c</fullName>
        <formula>Trainee__r.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受講者氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受講者従業員番号</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>TrainingProgramProgress</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrainingProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>教育プログラム</label>
        <referenceTo>TrainingProgram__c</referenceTo>
        <relationshipLabel>受講者</relationshipLabel>
        <relationshipName>TrainingProgramProgress</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>教育プログラム進捗</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>進捗番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>